# Selfdriving-perception-system

./: README.md
gps_imu/src/DataspeedInc-oxford_gps_eth-2b253a39915e/: .hg_archival.txt
lidar_camera/devel/: .catkin  setup.sh
lidar_camera/devel/include/aruco_mapping/: ArucoMarker.h
lidar_camera/devel/include/aruco_msgs/: Marker.h  MarkerArray.h
lidar_camera/devel/include/lidar_camera_calibration/: marker_6dof.h
lidar_camera/devel/lib/aruco/: optimalmarkers
lidar_camera/devel/lib/aruco_ros/: marker_publisher
lidar_camera/devel/lib/lidar_camera_calibration/: find_transform
lidar_camera/devel/lib/pkgconfig/: aruco_ros.pc
lidar_camera/devel/share/aruco_mapping/cmake/: aruco_mapping-msg-paths.cmake  aruco_mappingConfig.cmake
lidar_camera/devel/share/aruco_msgs/cmake/: aruco_msgs-msg-extras.cmake  aruco_msgs-msg-paths.cmake  aruco_msgsConfig.cmake
lidar_camera/devel/share/aruco_ros/cmake/: aruco_rosConfig.cmake
lidar_camera/devel/share/lidar_camera_calibration/cmake/: lidar_camera_calibration-msg-paths.cmake
lidar_camera/devel/share/roseus/ros/lidar_camera_calibration/: manifest.l
lidar_camera/src/aruco_mapping/data/: ptgrey.ini
loam_velodyne/launch/: loam_velodyne.launch
multi_lidar_calib/: CMakeLists.txt  multi_lidar_calib.cpp  multi_lidar_calib.h
src/generalized_icp/src/: gicp_calibrate.h
src/lidar_camera/devel/lib/aruco_ros/: double
src/lidar_camera/devel/lib/pkgconfig/: aruco.pc  aruco_mapping.pc  aruco_msgs.pc  lidar_camera_calibration.pc
src/lidar_camera/devel/share/aruco_ros/docs/: ArucoThresholdConfig.wikidoc
src/multi_lidar_loam/: CMakeLists.txt  MultiScanRegistration.cpp  multi_lidar_calib.cpp  transformation (copy).cpp  transformation.cpp
src/optimal-design/: lidar_model.m
src/useeigen/: CMakeLists.txt  package.xml  useeigen.cpp
src/velodyne/src/generalized_icp/: CMakeLists.txt
src/velodyne/src/lidar_transform/: multi_lidar_calib_class.cpp  transformation.h
src/velodyne/src/lidar_transform/include/loam_velodyne/: CircularBuffer.h  Vector3.h
src/velodyne/src/loam_velodyne/src/lib/: LaserMapping.cpp  MultiScanRegistration.cpp
src/velodyne/src/multi_lidar_loam_calibration/: multi_lidar_calib.h  multi_lidar_calib_class.cpp
src/velodyne/src/multi_lidar_loam_calibration/include/loam_velodyne/: Angle.h  MultiScanRegistration.h
src/velodyne/src/sensor_sync/: package.xml
velodyne/backup/multi_lidar_calib_extraction/: CMakeLists.txt  multi_lidar_calib.h  multi_lidar_calib_class.cpp
velodyne/backup/multi_lidar_calib_extraction/include/loam_velodyne/: Twist.h
velodyne/backup/multi_lidar_loam/: math_utils.h  multi_lidar_calib.h  multi_lidar_calib_class.cpp  package.xml
velodyne/multi_lidar_calib_topic_sync/: CMakeLists.txt  multi_lidar_calib.cpp  multi_lidar_calib.h  package.xml
velodyne/multi_lidar_loam/: multi_lidar_calib_class.cpp
velodyne/multi_lidar_loam/include/loam_velodyne/: common.h
workspace/src/: README.md
workspace/src/gps_imu/src/DataspeedInc-oxford_gps_eth-2b253a39915e/: CMakeLists.txt
workspace/src/lidar_camera/devel/: .rosinstall
workspace/src/lidar_camera/devel/include/aruco_ros/: ArucoThresholdConfig.h
workspace/src/optimal-design/: Readme.txt  compute_unified_range.m  gen.m  generate_scan_points.m  main.m
workspace/src/velodyne/src/lidar_transform/: CMakeLists.txt  multi_lidar_calib.h  package.xml
workspace/src/velodyne/src/multi_lidar_loam_calibration/: ScanRegistration.cpp
workspace/src/velodyne/src/sensor_sync/: CMakeLists.txt  sensor_sync.cpp
(+16 files in other folders)
